# Rebar-segmentation-Ransac

./: .gitignore  README.md  average.py  config.rviz  default.rviz  filtered_camera_coordinates.csv
.catkin_tools/profiles/default/: devel_collisions.txt
.github/workflows/: main.yml  ros1.yml
Damage_size_test/: 20cm_2cm.txt  30cm_2cm.txt  50cm_05cm.txt  60cm_1cm.txt
Spacer/: StangHolder_240627b.stl  simplified_for_GitHub_rendering.stl
catkin_ws/src/rebarsegmenation/: CMakeLists.txt  package.xml
catkin_ws/src/rebarsegmenation/cfg/: MyParams.cfg
catkin_ws/src/rebarsegmenation/include/: image_processing.h  publish.h  ransac_node.h  utils.h
catkin_ws/src/rebarsegmenation/launch/: rebarsegmenation.launch
catkin_ws/src/rebarsegmenation/rviz/: rebarsegmenation.rviz
catkin_ws/src/rebarsegmenation/src/: image_processing.cpp  publish.cpp  ransac_node.cpp  utils.cpp
doc/Damage_size_test/: 20cm_02cm.txt  20cm_05cm.txt  20cm_1cm.txt  30cm_05cm.txt  30cm_1cm.txt  40cm_05cm.txt  40cm_1cm.txt  40cm_2cm.txt  50cm_1cm.txt  50cm_2cm.txt  60cm_2cm.txt
doc/Spacer/: StangHolder_240627b.rsdocx
docker/main_pkg/: Dockerfile  docker-compose-common.yml  docker-compose-nvidia.yml  docker-compose.yml  entrypointd.sh
src/: img2cam_frame.py
src/OnlinePotholeDetection/: CMakeLists.txt  package.xml
src/OnlinePotholeDetection/cfg/: MyParams.cfg
src/OnlinePotholeDetection/include/: AOITracker.h  MyParamsConfig.h  plantcv.h  rebar_seg.h
src/OnlinePotholeDetection/launch/: ExtrinsicCalibration.launch  OnlinePotholeDetection.launch
src/OnlinePotholeDetection/rviz/: pothole.rviz
src/OnlinePotholeDetection/scripts/: plot.py
src/OnlinePotholeDetection/scripts/DetectionNode/: dataloader.py  detection_node.py  transforms.py  unet.py
src/OnlinePotholeDetection/scripts/ExtrinsicCalibrationNode/: ExtrinsicCalibrationNode.py
src/OnlinePotholeDetection/src/: AOITracker.cpp  plantcv.cpp  publish.py  ransac_node.cpp  rebar2camera_coords.py  rebar_seg.cpp  rebar_segmentation_attempt2.py
src/rebarsegmenation/: CMakeLists.txt
src/rebarsegmenation/cfg/: MyParams.cfg
src/rebarsegmenation/include/: rebar_seg.h
src/rebarsegmenation/launch/: RansacVisualization.launch  rebarsegmenation.launch
src/rebarsegmenation/rviz/: rebarsegmenation.rviz
src/rebarsegmenation/src/: defines.py  import rospy_old.py  ransac_node.cpp  rebar2camera_coords.py  rebar_seg.cpp
src/rebarsegmentation/: CMakeLists.txt  package.xml
src/rebarsegmentation/include/rebarsegmentation/: rebar_seg.h
src/rebarsegmentation/src/: ransac_node.cpp  rebar_seg.cpp
sup/: run_docker_rebars_segmentation.sh
